# flashtalk

./: LICENSE  README.md  project_structure  工程结构.md  流程图.md
clients/web/: index.html  server.py
clients/web/js/: app.js
server/: pom.xml
server-cpp/: CMakeLists.txt
server-cpp/cmake/: FindLive555.cmake
server-cpp/common/proto/: speech_service.proto
server-cpp/docker/services/: stream_service.Dockerfile
server-cpp/scripts/: setup_dependencies.sh
server-cpp/services/stream_service/: CMakeLists.txt
server-cpp/services/stream_service/include/: stream_service.h
server-cpp/services/stream_service/include/rtp/: rtp_server.h
server-cpp/services/stream_service/src/: main.cpp  stream_service.cpp
server-cpp/services/stream_service/src/rtp/: rtp_server.cpp  rtp_source.h
server/scripts/: build_native.sh
server/stream-service/: pom.xml
server/stream-service/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
server/stream-service/src/main/java/com/speech/stream/rtp/: RtpPacket.java  RtpServer.java
server/stream-service/src/main/kotlin/com/speech/stream/: StreamServiceApplication.kt
server/stream-service/src/main/kotlin/com/speech/stream/config/: WebSocketConfig.kt
server/stream-service/src/main/kotlin/com/speech/stream/grpc/: GrpcServer.kt
server/stream-service/src/main/kotlin/com/speech/stream/opus/: OpusDecoder.kt  OpusJNI.kt
server/stream-service/src/main/kotlin/com/speech/stream/rtp/: RtpPacket.kt  RtpPacketDecoder.kt  RtpServer.kt  RtpServerHandler.kt
server/stream-service/src/main/kotlin/com/speech/stream/service/: AudioProcessor.kt  ServiceBootstrapper.kt
server/stream-service/src/main/resources/: application.yml
server/stream-service/src/main/resources/native/macos/: libopus_jni.dylib
